--- a/Calendar/src/main/resources/templates/calendar.html
+++ b/Calendar/src/main/resources/templates/calendar.html
@@ -4,14 +4,20 @@
 <meta charset="UTF-8"></meta>
 <title>Calendar</title>
 <style type="text/css">
-.currentYearMonth>p{
-    font-size: 20px
+td {
+	width: 60px;
 }
+
+.currentYearMonth>p {
+	font-size: 20px
+}
+
 .monthButtons>form {
 	float: left;
 }
 </style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/calendar.js" th:src="@{/js/calendar.js}"></script>
 </head>
 <body>
@@ -29,11 +35,17 @@
 		</form>
 	</div>
 	<br></br>
-	<div class="newEventZone">
+	<div>
 		<form action="/addEvent" method="post" id="newEventFrom">
-			<input type="date" name="date"/>
-			<input type="text" name="event"/>
-			<input type="submit" value="新規に予定を追加する"/>
+			<div class="newEventZone">
+				<table>
+					<tr>
+						<td><input type="date" name="date" /></td>
+						<td><input type="text" name="event" /></td>
+					</tr>
+				</table>
+			</div>
+			<input type="submit" value="新規に予定を追加する" />
 		</form>
 		<button id="plusNewEventForm">+</button>
 	</div>
