新規予定を一度に登録できるようにフォームクラスに配列を追加

--- a/Calendar/src/main/resources/templates/calendar.html
+++ b/Calendar/src/main/resources/templates/calendar.html
@@ -40,8 +40,8 @@ td {
 			<div class="newEventZone">
 				<table>
 					<tr>
-						<td><input type="date" name="date" /></td>
-						<td><input type="text" name="event" /></td>
+						<td><input type="date" name="newEvents[0]date" /></td>
+						<td><input type="text" name="newEvents[0]event" /></td>
 					</tr>
 				</table>
 			</div>
