削除ボタンを押すとその日の予定が全て削除される

--- a/Calendar/src/main/resources/templates/calendar.html
+++ b/Calendar/src/main/resources/templates/calendar.html
@@ -51,6 +51,7 @@ td {
 		<button id="plusNewEventForm">+</button>
 	</div>
 	<br></br>
+	<p th:text="${errorMsg}"></p>
 	<br></br>
 	<table border="1" id="calendarZone">
 		<tr th:each="week:${calendar}">
