--- a/Calendar/src/main/resources/templates/calendar.html
+++ b/Calendar/src/main/resources/templates/calendar.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8"></meta>
 <title>Calendar</title>
 <link
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	rel="stylesheet"></link>
 <style type="text/css">
 td {
 	width: 60px;
@@ -22,7 +23,7 @@ td {
 	<script
 		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<div class="currentYearMonth">
-		<p th:text="${month}"></p>
+		<h1 th:text="${month}"></h1>
 	</div>
 	<div class="monthButtons">
 		<table>
@@ -30,13 +31,15 @@ td {
 				<td>
 					<form action="/minus" method="post" id="newEventForm">
 						<input type="hidden" name="viewingYearMonth" value=""
-							th:value="${month}"></input> <input class="btn btn-default" type="submit" value="前月"></input>
+							th:value="${month}"></input> <input class="btn btn-default"
+							type="submit" value="前月"></input>
 					</form>
 				</td>
 				<td>
 					<form action="/plus" method="post" id="newEventForm">
 						<input type="hidden" name="viewingYearMonth" value=""
-							th:value="${month}"></input> <input class="btn btn-default" type="submit" value="次月"></input>
+							th:value="${month}"></input> <input class="btn btn-default"
+							type="submit" value="次月"></input>
 					</form>
 				</td>
 			</tr>
@@ -59,7 +62,8 @@ td {
 						</table>
 					</div>
 					<input type="hidden" name="viewingYearMonth" value=""
-						th:value="${month}" /> <input class="btn btn-primary" type="submit" value="新規に予定を追加する" />
+						th:value="${month}" /> <input class="btn btn-primary"
+						type="submit" value="新規に予定を追加する" />
 				</form>
 			</td>
 		</tr>
@@ -68,6 +72,7 @@ td {
 	<p th:text="${errorMsg}"></p>
 	<br></br>
 	<table border="1" id="calendarZone" class="table-responsive">
+		<tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr>
 		<tr th:each="week:${calendar}">
 			<td th:each="day:${week}">
 				<h4 th:text="${day.date}"></h4>
