--- a/Calendar/src/main/resources/templates/calendar.html
+++ b/Calendar/src/main/resources/templates/calendar.html
@@ -14,6 +14,14 @@ td {
 .currentYearMonth>p {
 	font-size: 20px
 }
+
+#dayRow {
+	background-color: #d4d4d4;
+}
+
+#calendarZone tr:nth-child(n+2) {
+	background-color: #f2f2f2;
+}
 </style>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -72,8 +80,16 @@ td {
 	<p th:text="${errorMsg}"></p>
 	<br></br>
 	<table border="1" id="calendarZone" class="table-responsive">
-	<!-- eventsから月を取り出し、その月の日ではないときは字の色を薄くするようにしたい -->
-		<tr><th style="color:red">Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th style="color:blue">Sat</th></tr>
+		<!-- eventsから月を取り出し、その月の日ではないときは字の色を薄くするようにしたい -->
+		<tr id="dayRow">
+			<th style="color: red">Sun</th>
+			<th>Mon</th>
+			<th>Tue</th>
+			<th>Wed</th>
+			<th>Thu</th>
+			<th>Fri</th>
+			<th style="color: blue">Sat</th>
+		</tr>
 		<tr th:each="week:${calendar}">
 			<td th:each="day:${week}">
 				<h4 th:text="${day.date}"></h4>
