不要なセレクタを削除

--- a/Calendar/src/main/resources/templates/calendar.html
+++ b/Calendar/src/main/resources/templates/calendar.html
@@ -19,7 +19,7 @@ td {
 	background-color: #d4d4d4;
 }
 
-#calendarZone tr:nth-child(n+2) td:nth-child(1),td:nth-child(7) {
+#calendarZone td:nth-child(1),td:nth-child(7) {
 	background-color: #f6f6f6;
 }
 </style>
